src/objects/Outbound_Campaigns__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CampaignId__c</fullName>
        <label>CampaignId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Status__c</fullName>
        <label>Member Status</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>TextArea</type>
    </fields>
    <label>Outbound Campaigns</label>
    <listViews>
        <fullName>All_with_details</fullName>
        <columns>NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>CampaignId__c</columns>
        <columns>Member_Status__c</columns>
        <columns>Role__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All with details</label>
    </listViews>
</CustomObject>